# Desktop

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
locales/: en.yml  ru.yml
src/: auto-imports.d.ts  components.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/deduty/: Cargo.toml
src-tauri/crates/deduty/crates/package/: Cargo.toml
src-tauri/crates/deduty/crates/package/src/: error.rs  lib.rs
src-tauri/crates/deduty/crates/package/src/file/: mod.rs  serde.rs  traits.rs
src-tauri/crates/deduty/crates/package/src/lection/: mod.rs  serde.rs  traits.rs
src-tauri/crates/deduty/crates/package/src/package/: mod.rs  serde.rs  traits.rs
src-tauri/crates/deduty/crates/storage/: Cargo.toml
src-tauri/crates/deduty/crates/storage/src/: active.rs
src-tauri/crates/deduty/src/: lib.rs
src-tauri/crates/deduty_application_resources/: Cargo.toml
src-tauri/crates/deduty_application_resources/src/: package.rs  reader.rs
src-tauri/crates/deduty_application_settings/: Cargo.toml
src-tauri/crates/deduty_application_settings/src/: settings.rs
src-tauri/crates/deduty_package/: Cargo.toml
src-tauri/crates/deduty_package/src/: file.rs  lection.rs  lib.rs  package.rs  reader.rs
src-tauri/crates/deduty_package/src/file/: meta.rs  mod.rs  read.rs  serde.rs  traits.rs  unique.rs
src-tauri/crates/deduty_package/src/lection/: meta.rs  mod.rs  peek.rs  read.rs  serde.rs  unique.rs
src-tauri/crates/deduty_package/src/package/: meta.rs  mod.rs  peek.rs  read.rs  serde.rs  traits.rs  unique.rs
src-tauri/crates/deduty_package/src/serde/: file.rs  lection.rs  mod.rs  package.rs  traits.rs
src-tauri/crates/deduty_package_index/: Cargo.toml
src-tauri/crates/deduty_package_index/src/: active.rs  agent.rs  index.rs  lib.rs  reqs.rs  service.rs
src-tauri/crates/deduty_package_premier/: Cargo.toml
src-tauri/crates/deduty_package_premier/src/: lection.rs  lib.rs  package.rs
src-tauri/crates/deduty_package_serde/: Cargo.toml
src-tauri/crates/deduty_package_serde/src/: file.rs  lection.rs  lib.rs  package.rs
src-tauri/crates/deduty_package_storage/: Cargo.toml
src-tauri/crates/deduty_package_storage/src/: index.rs  lib.rs  storage.rs
src-tauri/crates/deduty_package_traits/: Cargo.toml
src-tauri/crates/deduty_package_traits/src/: file.rs  lection.rs  lib.rs  package.rs
src-tauri/crates/deduty_schema_auto/: Cargo.toml
src-tauri/crates/deduty_schema_auto/src/: borrowed.rs  error.rs  lib.rs
src-tauri/crates/deduty_schema_auto/src/file/: meta.rs  mod.rs  read.rs  unique.rs
src-tauri/crates/deduty_schema_auto/src/lection/: meta.rs  mod.rs  peek.rs  read.rs  unique.rs
src-tauri/crates/deduty_schema_auto/src/package/: meta.rs  mod.rs  peek.rs  read.rs  unique.rs
src-tauri/crates/deduty_schema_auto/src/reader/: mod.rs  reader.rs
src-tauri/crates/deduty_schema_auto/src/schemes/: lection.rs  mod.rs  package.rs
src-tauri/crates/deduty_schema_auto/src/service/: add.rs  index.rs  mod.rs  statefull.rs  sub.rs  unique.rs  update.rs  web_storage.rs
src-tauri/crates/deduty_scheme_premier/: Cargo.toml
src-tauri/crates/deduty_scheme_premier/src/: actions.rs  agent.rs  lib.rs  service.rs
src-tauri/crates/deduty_scheme_premier/src/file/: file.rs  reader.rs
src-tauri/crates/deduty_scheme_premier/src/lection/: collection.rs  core.rs  meta.rs
src-tauri/crates/deduty_scheme_premier/src/package/: collection.rs  core.rs  meta.rs  mod.rs
src-tauri/crates/deduty_scheme_premier/src/schemes/: lection.rs  mod.rs  package.rs
src-tauri/crates/deduty_service/: Cargo.toml
src-tauri/crates/deduty_service/src/: add.rs  index.rs  lib.rs  statefull.rs  storage.rs  sub.rs  unique.rs  update.rs  web_storage.rs
src-tauri/crates/deduty_storage/: Cargo.toml
src-tauri/crates/deduty_storage/src/: active.rs  lib.rs
src-tauri/crates/schemes/premier/: Cargo.toml
src-tauri/crates/schemes/premier/src/: actions.rs  error.rs  lib.rs
src-tauri/crates/schemes/premier/src/file/: file.rs  mod.rs  reader.rs
src-tauri/crates/schemes/premier/src/lection/: collection.rs  core.rs  meta.rs  mod.rs
src-tauri/crates/schemes/premier/src/package/: collection.rs  core.rs  file.rs  meta.rs  mod.rs
src-tauri/crates/schemes/premier/src/schemes/: lection.rs  package.rs
src-tauri/crates/xresult/: Cargo.toml
src-tauri/crates/xresult/src/: lib.rs  xerror.rs  xreason.rs  xresult.rs
src-tauri/src/: main.rs  manifest.rs
src-tauri/src/commands/: chunked.rs  mod.rs  package.rs  service.rs  storage.rs  web_storage.rs
src-tauri/src/deduty/package/: commands.rs  manifest.rs  mod.rs
src-tauri/src/index/: package.rs  reader.rs
src-tauri/src/managers/: mod.rs  readers.rs  services.rs  settings.rs
src-tauri/src/managers/web_storage/: mod.rs  scheme.rs  storage.rs
src-tauri/src/package/: commands.rs  manifest.rs
src-tauri/src/utils/: borrowed.rs  mod.rs
src/components/: Error.vue  LectionReader.vue  Loading.vue  Message.vue  Reader.vue  Search.vue  Sidebar.vue
src/components/AddPackage/: CreatePackage.vue  GitPackage.vue  LocalPackage.vue
src/components/Addpackage/: Addpackage.vue
src/components/LectionBar/: LectionBar.vue  LectionMenu.vue  LectionSearch.vue
src/components/LectionList/: LectionItem.vue  LectionList.vue
src/components/PackageAdd/: LocalPackageAdd.vue  PackageAdd.vue  PackageAddSuspense.vue
src/components/PackageBar/: PackageBar.vue  PackageList.vue  PackageMenu.vue  PackageSearch.vue
src/components/PackageForm/: PackageForm.vue  PackageFormAbout.vue  PackageFormMenu.vue  PackageFormMeta.vue  PackageFormSettings.vue
src/components/PackageList/: PackageItem.vue  PackageList.vue
src/components/PackageRequirements/: DirectoryPathRequirement.vue  PackageRequirements.vue
src/components/Reader/: Reader.vue  ReaderHtmlComponent.vue  ReaderImageComponent.vue  ReaderMarkdownComponent.vue
src/components/SettingsList/: SettingsDeleteAll.vue  (+3 more)
src/composables/: dynamic.ts  search.ts
src/layouts/: default.vue
src/modules/: i18n.ts
src/pages/: [...all].vue  index.vue  settings.vue
src/store/: package.ts
(+51 files in other folders)
