[package]
name = "desktop"
version = "0.1.0"
description = "Deduty desktop is an application for education"
authors = ["Helltraitor <helltraitor@hotmail.com>"]

# EXAMPLE: https://github.com/Eliah-Lakhin/lady-deirdre/blob/master/EULA.md
license = "EULA"

repository = "https://github.com/Deduty/Desktop"
edition = "2021"
rust-version = "1.65"

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
# Main
deduty_application_resources = { path = "./crates/deduty_application_resources" }

## Package traits and other package crates
deduty_package_traits = { path = "./crates/deduty_package_traits" }
deduty_package_serde = { path = "./crates/deduty_package_serde" }
deduty_package_index = { path = "./crates/deduty_package_index" }

## Schemes
deduty_scheme_premier = { path = "./crates/deduty_scheme_premier" }

## Support
xresult = { path = "./crates/xresult" }

# Foreign
async-std = "1.12.0"
async-trait = "0.1.58"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["dialog-open"] }
toml = "0.5"
uuid = "1.2.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
