[package]
name = "deduty_package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xresult = { path = '../xresult' }

async-trait = "0.1.64"
serde = { version = "1.0.152", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
