[package]
name = "deduty_package_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deduty_package_traits = { path = "../deduty_package_traits"}
xresult = { path = "../xresult" }

async-std = "1.12.0"
async-trait = "0.1.58"
