[package]
name = "deduty_package_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deduty_package_traits = { path = "../deduty_package_traits" }
xresult = { path = "../xresult" }

async-std = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
