[package]
name = "deduty_schema_auto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deduty_package = { path = "../deduty_package" }
deduty_service = { path = "../deduty_service" }

async-std = "1.12.0"
async-trait = "0.1.58"
natord = "1.0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
uuid = { version = "1.2.2", features = ["v4"] }
xresult = { path = "../xresult" }
serde_json = "1.0.93"
