[package]
name = "deduty_scheme_premier"
version = "0.1.0"
edition = "2021"

[dependencies]
deduty_package_traits = { path = "../deduty_package_traits" }
xresult = { path = "../xresult" }

async-std = "1.12.0"
async-trait = "0.1.58"
regex = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
uuid = "1.2.2"
