[package]
name = "deduty_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Main dependency
deduty_package = { path = "../deduty_package" }

# Other dependencies
async-trait = "0.1.64"
xresult = { path = "../xresult" }
async-std = "1.12.0"
